# ChangeLog for media-gfx/transfig
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/transfig/ChangeLog,v 1.2 2002/04/13 00:29:37 seemant Exp $

*transfig-3.2.3d-r1 (12 Apr 2002)

  12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> transfig-3.2.3d-r1.ebuild :

  Added Description, and compile against newer libpng

*transfig-3.2.3d (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.