@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xfig/Attic/xfig-3.2.3d-r1.ebuild,v 1.3 2002/07/23 05:18:07 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xfig/Attic/xfig-3.2.3d-r1.ebuild,v 1.4 2002/09/07 18:09:25 owen Exp $
 
 MY_P=${P/xfig-/xfig.}
 S=${WORKDIR}/${MY_P}
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.xfig.org"
 
 SLOT="0"
 LICENSE="BSD"
-KEYWORDS="x86"
+KEYWORDS="x86 ppc"
 
 DEPEND="virtual/x11
 	media-libs/jpeg
