@@ -1,8 +1,11 @@
 # ChangeLog for media-gfx/xfig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.2 2002/04/14 03:54:07 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/xfig/ChangeLog,v 1.3 2002/09/07 18:09:25 owen Exp $
 
 *xfig-3.2.3d-r1 (13 Apr 2002)
+
+  7 Sep 2002; Owen Stampflee <owen@gentoo.org> :
+  Added PPC to KEYWORDS.
 
   13 Apr 2002; Seemant Kulleen <seemant@gentoo.org> xfig-3.2.3d-r1.ebuild :
 
