@@ -1,8 +1,11 @@
 # ChangeLog for media-gfx/transfig
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/transfig/ChangeLog,v 1.2 2002/04/13 00:29:37 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/transfig/ChangeLog,v 1.3 2002/09/07 18:08:26 owen Exp $
 
 *transfig-3.2.3d-r1 (12 Apr 2002)
+
+  7 Sep 2002; Owen Stampflee <owen@gentoo.org> :
+  Added PPC to KEYWORDS.
 
   12 Apr 2002; Seemant Kulleen <seemant@gentoo.org> transfig-3.2.3d-r1.ebuild :
 
